<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/app_name" >
        <io.github.sealor.android.applock.activity.preference.EditPasswordPreference
            android:inputType="textPassword"
            android:key="PASSWORD_HASH"
            android:summary="@string/password_summary"
            android:title="@string/password_title" />

        <io.github.sealor.android.applock.activity.preference.AppNamePreference
            android:summary="@string/app_name_summary"
            android:title="@string/app_name_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/general" >
        <io.github.sealor.android.applock.activity.preference.AmazonPreference
            android:summary="@string/donation_amazon_summary"
            android:title="@string/donation_amazon_title" />

        <io.github.sealor.android.applock.activity.preference.PayPalPreference
            android:summary="@string/donation_paypal_summary"
            android:title="@string/donation_paypal_title" />

        <io.github.sealor.android.applock.activity.preference.BitcoinPreference
            android:summary="@string/donation_bitcoin_summary"
            android:title="@string/donation_bitcoin_title" />

        <io.github.sealor.android.applock.activity.preference.AboutPreference android:title="@string/about_title" />
    </PreferenceCategory>

</PreferenceScreen>